--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -7,6 +7,10 @@
           <a [routerLink]="['/login']">Have an account</a>
         </p>
         Backend errors are here
+        <mc-backend-error-messages
+          *ngIf="backendErrors$ | async"
+          [backendErrors]="backendErrors$ | async"
+        ></mc-backend-error-messages>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <fieldset>
             <fieldset class="form-group">
@@ -18,22 +22,28 @@
               />
             </fieldset>
             <fieldset class="form-group">
-                <input
-                  type="email"
-                  class="form-control form-control-lg"
-                  placeholder="Email"
-                  formControlName="email"
-                />
-              </fieldset>
-              <fieldset class="form-group">
-                <input
-                  type="password"
-                  class="form-control form-control-lg"
-                  placeholder="Password"
-                  formControlName="password"
-                />
-              </fieldset>
-              <button [disabled]="isSubmitting$ | async" class="btn btn-lg btn-primary pull-xs-right" type="submit">Sign Up</button>
+              <input
+                type="email"
+                class="form-control form-control-lg"
+                placeholder="Email"
+                formControlName="email"
+              />
+            </fieldset>
+            <fieldset class="form-group">
+              <input
+                type="password"
+                class="form-control form-control-lg"
+                placeholder="Password"
+                formControlName="password"
+              />
+            </fieldset>
+            <button
+              [disabled]="isSubmitting$ | async"
+              class="btn btn-lg btn-primary pull-xs-right"
+              type="submit"
+            >
+              Sign Up
+            </button>
           </fieldset>
         </form>
       </div>
