--- a/src/app/globalFeed/components/globalFeed/globalFeed.component.html
+++ b/src/app/globalFeed/components/globalFeed/globalFeed.component.html
@@ -1,1 +1,14 @@
-<mc-feed></mc-feed>
+<div class="home-page">
+    BANNER
+    <div class="container page">
+        <div class="row">
+            <div class="col-mt-9">
+                FEED TOGGLER
+                <mc-feed [apiUrl]="apiUrl"></mc-feed>
+            </div>
+            <div class="col-mt-3">
+                POPULAR TAGS
+            </div>
+        </div>
+    </div>
+</div>
