add pagination module

--- a/src/app/shared/modules/feed/components/globalFeed/feed.component.html
+++ b/src/app/shared/modules/feed/components/globalFeed/feed.component.html
@@ -23,5 +23,5 @@
       Here is list of tags
     </a>
   </div>
-  PAGINATION
+  <mc-pagination [total]="(feed$ | async)?.articlesCount" [limit]="limit" [url]="baseUrl" [currentPage]="currentPage"></mc-pagination>
 </div>
