--- a/src/app/shared/modules/feed/components/globalFeed/feed.component.html
+++ b/src/app/shared/modules/feed/components/globalFeed/feed.component.html
@@ -20,7 +20,7 @@
     <a [routerLink]="['/articles', article.slug]" class="preview-link">
       <h1>{{ article.title }}</h1>
       <p>{{ article.description }}</p>
-      Here is list of tags
+      <mc-tag-list [tags]="article.tagList"></mc-tag-list>
     </a>
   </div>
   <mc-pagination [total]="(feed$ | async)?.articlesCount" [limit]="limit" [url]="baseUrl" [currentPage]="currentPage"></mc-pagination>
